fixe padding & button on mobile

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -51,3 +51,13 @@
 
 
 
+@include media-breakpoint-only(xs) {
+  .btn-navbar {
+    border-radius: 6px;
+    width: 50%;
+    position: relative;
+    right: 23px;
+  }
+}
+
+
