--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -34,3 +34,9 @@
   background-color: #ffff;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
+
+@include media-breakpoint-only(xs) {
+  .navbar {
+    padding-left: 2rem;
+  }
+}
